prevent overflowing text in expandable boxes
SRFCMSAL-854

--- a/source/_patterns/20-molecules/expandable-box/expandable-box.scss
+++ b/source/_patterns/20-molecules/expandable-box/expandable-box.scss
@@ -133,6 +133,8 @@ $expandable-box-padding-desktop: 24px;
     padding: 0 $expandable-box-padding-desktop $expandable-box-padding-desktop;
     font-size: 18px;
   }
+
+  @include breakLongWords();
 }
 
 // Expandable can also be not expandable. Hides the expand icon if it's not already removed on render
